--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "",
+    "name": "dota2_boats",
     "private": true,
     "scripts": {
         "postinstall": "node scripts/install.js",
